--- a/src/app/pages/partner-details/partner-details.page.html
+++ b/src/app/pages/partner-details/partner-details.page.html
@@ -5,9 +5,10 @@
 </ion-header>
 
 <ion-content>
-
-
-      {{partnerDetails.partnerName}}
-
-
+  {{partnerDetails.partnerName}}
+  <ion-list>
+    <ion-item *ngFor="let bevServed of partnerDetails.beveragesServed">
+      {{bevServed.beverageName}}
+    </ion-item>
+  </ion-list>
 </ion-content>
