--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,8 +1,8 @@
 <ion-content>
   <ion-list>
-    <ion-card *ngFor="let partner of partners" [routerLink] ="['/tabs',partner.id]">
-      <ion-card-header>{{partner.partnerName}}</ion-card-header>
-    </ion-card>
+    <app-partner *ngFor="let partner of partners" [partnerItem]="partner">
+
+    </app-partner>
   </ion-list>
 
 </ion-content>
