added add button

--- a/src/app/components/beverage-item/beverage-item.component.html
+++ b/src/app/components/beverage-item/beverage-item.component.html
@@ -1,5 +1,7 @@
 <ion-list>
   <ion-item>
     {{beverageItem.beverageName}}
+    <ion-button slot="end" (click) = "addBeverage(beverageItem)">Add</ion-button>
   </ion-item>
+  
 </ion-list>
