added profile skeleton

--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -6,4 +6,9 @@
 
 <ion-content>
 
+  <h2> {{user.userName}}</h2>
+  <h2> {{user.userMailId}}</h2>
+  <h2> {{user.userPhoneNum}}</h2>
+
+
 </ion-content>
