--- a/src/app/components/partner/partner.component.html
+++ b/src/app/components/partner/partner.component.html
@@ -1,3 +1,3 @@
-<ion-card  [routerLink] ="['/tabs',partnerItem.id]">
-  <ion-card-header>{{partnerItem.partnerName}}</ion-card-header>
+<ion-card [ngStyle]= "{'background-image': 'url('+ partnerItem.imageUrl +')'}" [routerLink] ="['/tabs',partnerItem.id]" >
+  <!-- <ion-card-content class ="card-content">{{partnerItem.partnerName}}</ion-card-content> -->
 </ion-card>
