--- a/src/app/components/partner/partner.component.scss
+++ b/src/app/components/partner/partner.component.scss
@@ -6,6 +6,7 @@ ion-card  {
     margin-inline-start: 15px;
     margin-inline-end: 15px;
     height:150px;
+    margin-bottom: 20px;
     background-size: contain;
     opacity: 0.8;
 
