--- a/src/app/components/added-item/added-item.component.html
+++ b/src/app/components/added-item/added-item.component.html
@@ -1,13 +1,21 @@
 <ion-list>
-  <ion-item>
+  <!-- <ion-item>
     {{beverageItem.beverageName}} X {{beverageItem.quantity}}
     <ion-button slot="end" (click)="deleteItem(beverageItem.beverageId)">
       <ion-icon slot="icon-only" name="close"></ion-icon>
     </ion-button>
+  </ion-item> -->
 
-  </ion-item>
   <ion-item>
-    Price: {{beverageItem.beveragePrice}}
+    <ion-avatar slot="start" size="large">
+      <img [src]="beverageItem.bannaerImageUrl">
+    </ion-avatar>
+    <ion-label>
+      <h3 style="font-family: 'Montserrat Regular'">{{beverageItem.beverageName}}</h3>
+      <p style="font-family: 'Montserrat Regular'"> Quantity: {{beverageItem.quantity}}</p>
+    </ion-label>
+    <!-- <ion-button slot="end" (click)="deleteItem(beverageItem.beverageId)" fill="outline"></ion-button> -->
+    <ion-icon name="close-circle-outline" (click)="deleteItem(beverageItem.beverageId)" color="danger"></ion-icon>
   </ion-item>
 
 </ion-list>
