--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,14 +1,30 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>profile</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content>
-
-  <h2> {{user.userName}}</h2>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="2">
+        <ion-avatar>
+          <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+        </ion-avatar>
+      </ion-col>
+      <ion-col size="10" style="background-color: beige">
+        
+          <ion-label>{{user.userName}}</ion-label> <br />
+          <ion-label>{{user.userMailId}}</ion-label><br />
+          <ion-label>+91-{{user.userPhoneNum}}</ion-label>
+        
+      </ion-col>
+      <!-- <ion-col size="2">Change</ion-col> -->
+    </ion-row>
+  </ion-grid>
+  <!-- <h2> {{user.userName}}</h2>
   <h2> {{user.userMailId}}</h2>
-  <h2> {{user.userPhoneNum}}</h2>
+  <h2> {{user.userPhoneNum}}</h2> -->
 
 
 </ion-content>
