profile page styling

--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -1,7 +1,7 @@
-ion-label{
-    font-family: 'Montserrat Regular';
-    margin: 20px;
-    
+ion-label {
+  font-family: "Montserrat Regular";
+}
 
-    vertical-align: middle;
+ion-item{
+    font-family: 'Montserrat Medium';
 }
