--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -5,23 +5,39 @@
 </ion-header> -->
 
 <ion-content>
-  <ion-grid>
-    <ion-row>
+  <ion-grid style="padding: 0px; background-color: #f4f5f0;">
+    <ion-row style="padding: 10px; ">
       <ion-col size="2">
         <ion-avatar>
-          <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+          <img src="../../../assets/dp.jpg">
         </ion-avatar>
       </ion-col>
-      <ion-col size="10" style="background-color: beige">
-        
-          <ion-label>{{user.userName}}</ion-label> <br />
-          <ion-label>{{user.userMailId}}</ion-label><br />
-          <ion-label>+91-{{user.userPhoneNum}}</ion-label>
-        
+      <ion-col size="1"></ion-col>
+      <ion-col size="9">
+        <ion-label style="font-size: 20px">{{user.userName}}</ion-label> <br />
+        <ion-label style="font-size: 15px">{{user.userMailId}}</ion-label><br />
+        <ion-label style="font-size: 15px">+91-{{user.userPhoneNum}}</ion-label>
+
       </ion-col>
-      <!-- <ion-col size="2">Change</ion-col> -->
+
     </ion-row>
   </ion-grid>
+
+
+  <ion-list>
+    <ion-item>
+      You are at Hyderabad
+    </ion-item>
+    <ion-item>
+      Purchase History
+    </ion-item>
+    <ion-item>
+      Support
+    </ion-item>
+    <ion-item>
+      Settings
+    </ion-item>
+  </ion-list>
   <!-- <h2> {{user.userName}}</h2>
   <h2> {{user.userMailId}}</h2>
   <h2> {{user.userPhoneNum}}</h2> -->
