added new pages and navigation for them

--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -28,13 +28,13 @@
     <ion-item>
       You are at Hyderabad
     </ion-item>
-    <ion-item>
+    <ion-item routerLink="/tabs/history">
       Purchase History
     </ion-item>
-    <ion-item>
+    <ion-item routerLink="/tabs/support">
       Support
     </ion-item>
-    <ion-item>
+    <ion-item routerLink="/tabs/settings">
       Settings
     </ion-item>
   </ion-list>
