--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -25,8 +25,8 @@
 
 
   <ion-list>
-    <ion-item>
-      You are at Hyderabad
+    <ion-item (click) = "showBasicPicker()">
+      You are at &nbsp; <a> {{userCity}}</a>
     </ion-item>
     <ion-item routerLink="/tabs/history">
       Purchase History
