--- a/src/app/pages/support/support.page.html
+++ b/src/app/pages/support/support.page.html
@@ -1,9 +1,28 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>support</ion-title>
+    <ion-title style="text-align: center">
+      FAQ
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-card (click)="expandItem(faq)" *ngFor="let faq of faqs">
+    <ion-card-header>
+      <ion-card-title style="font-family: 'Montserrat Regular'; font-size: 15px; font-weight: 900">{{faq.title}}
+      </ion-card-title>
+    </ion-card-header>
 
+    <ion-card-content>
+      <app-expandable expandHeight="350px" [expanded]="faq.expanded">
+        <ion-item *ngFor="let subtitle of faq.subtitles"
+          style="font-family: 'Montserrat Medium'; font-weight: 400;font-size: 10px">
+          {{subtitle.subtitleHeading}}<br /> <br />
+          {{subtitle.answer}} <br /><br />
+        </ion-item>
+
+
+      </app-expandable>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
