removed lines in faq fix

--- a/src/app/pages/support/support.page.html
+++ b/src/app/pages/support/support.page.html
@@ -16,12 +16,10 @@
     <ion-card-content>
       <app-expandable expandHeight="350px" [expanded]="faq.expanded">
         <ion-item *ngFor="let subtitle of faq.subtitles"
-          style="font-family: 'Montserrat Medium'; font-weight: 400;font-size: 10px">
+          style="font-family: 'Montserrat Medium'; font-weight: 400;font-size: 10px" lines="none">
           {{subtitle.subtitleHeading}}<br /> <br />
           {{subtitle.answer}} <br /><br />
         </ion-item>
-
-
       </app-expandable>
     </ion-card-content>
   </ion-card>
