implemented settings page

--- a/src/app/pages/history/history.page.html
+++ b/src/app/pages/history/history.page.html
@@ -1,7 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>history</ion-title>
-
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/tabs/profile"></ion-back-button>
+    </ion-buttons>
+    <ion-title style="font-family: 'Montserrat Regular'">
+      History</ion-title>
   </ion-toolbar>
 </ion-header>
 
