--- a/src/app/pages/support/support.page.html
+++ b/src/app/pages/support/support.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title style="text-align: center">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/tabs/profile"></ion-back-button>
+    </ion-buttons>
+    <ion-title style="font-family: 'Montserrat Regular'">
       FAQ
     </ion-title>
   </ion-toolbar>
