--- a/src/app/pages/offers/offers.page.html
+++ b/src/app/pages/offers/offers.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>offers</ion-title>
+    <ion-title style="font-family: 'Montserrat Regular';text-align: center">Offers</ion-title>
   </ion-toolbar>
 </ion-header>
 
