--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -7,7 +7,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="dispense">
-      <ion-icon name="play"></ion-icon>
+      <ion-icon src="../../../assets/icons/dispense.svg"></ion-icon>
       <ion-label>Dispense</ion-label>
     </ion-tab-button>
 
@@ -17,7 +17,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="offers">
-      <ion-icon name="happy"></ion-icon>
+      <ion-icon src="../../../assets/icons/offer.svg"></ion-icon>
       <ion-label>Offers</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
