--- a/src/app/pages/offers/offers.page.html
+++ b/src/app/pages/offers/offers.page.html
@@ -5,5 +5,8 @@
 </ion-header>
 
 <ion-content>
+  <ion-item *ngFor="let offer of offers" lines="none">
+    <app-offer-item [OfferItem]="offer"></app-offer-item>
+  </ion-item>
 
 </ion-content>
