--- a/src/app/components/added-item/added-item.component.html
+++ b/src/app/components/added-item/added-item.component.html
@@ -8,7 +8,7 @@
 
   <ion-item>
     <ion-avatar slot="start" size="large">
-      <img [src]="beverageItem.bannaerImageUrl">
+      <img [src]="beverageItem.bannerImageUrl">
     </ion-avatar>
     <ion-label>
       <h3 style="font-family: 'Montserrat Regular'">{{beverageItem.beverageName}}</h3>
