--- a/src/app/pages/dispense/dispense.page.html
+++ b/src/app/pages/dispense/dispense.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Dispense</ion-title>
+    <ion-title style="font-family: 'Montserrat Regular'; text-align: center">Dispense</ion-title>
   </ion-toolbar>
 </ion-header>
 
