--- a/src/app/components/beverage-item/beverage-item.component.html
+++ b/src/app/components/beverage-item/beverage-item.component.html
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <ion-item>
     <ion-avatar slot="start" size = "large">
-      <img [src]="beverageItem.bannaerImageUrl">
+      <img [src]="beverageItem.bannerImageUrl">
     </ion-avatar>
     <ion-label>
       <h3 style="font-family: 'Montserrat Regular'">{{beverageItem.beverageName}}</h3>
