--- a/src/app/components/active-order-beverage-item/active-order-beverage-item.component.html
+++ b/src/app/components/active-order-beverage-item/active-order-beverage-item.component.html
@@ -1,11 +1,11 @@
 <ion-grid>
   <ion-row>
-    <ion-col size="4">
+    <ion-col size="3">
       <!-- <ion-card [ngStyle]="{'background-image': 'url('+ beverage.bannerImageUrl +')'}"> -->
-      <img [src]="beverage.bannerImageUrl">
+      <img [src]="beverage.bannerImageUrl" class="dispense-item">
       <!-- </ion-card> -->
     </ion-col>
-    <ion-col size="5" style="vertical-align: middle">
+    <ion-col size="6" style="vertical-align: middle">
       <p> {{beverage.beverageName}}<br />
         Quantity: {{beverage.quantity}}
       </p>
