--- a/src/app/components/active-order-beverage-item/active-order-beverage-item.component.scss
+++ b/src/app/components/active-order-beverage-item/active-order-beverage-item.component.scss
@@ -15,8 +15,17 @@ p {
   justify-content: center;
 }
 
-ion-col {
+.dispense-item {
   padding: 0px;
+  width: 70px;
+  height: 70px;
+  background-size: contain;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .dispense-button {
@@ -29,3 +38,9 @@ ion-col {
   top: 50%;
   transform: translateY(-50%);
 }
+
+ion-row {
+  border-bottom: 1px solid grey;
+  
+}
+
