--- a/src/app/components/active-order/active-order.component.html
+++ b/src/app/components/active-order/active-order.component.html
@@ -1,4 +1,5 @@
 <ion-card>
+  {{activeOrder.partnerName}}
   <app-active-order-beverage-item *ngFor="let beverage of activeOrder.beverages"
     (dispenseBeverage)=dispenseBevForOrder($event) [beverage]=beverage></app-active-order-beverage-item>
 </ion-card>
