--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -42,5 +42,7 @@
   <h2> {{user.userMailId}}</h2>
   <h2> {{user.userPhoneNum}}</h2> -->
 
+  <ion-button padding (click)=logout()>Logout</ion-button>
+
 
 </ion-content>
