facebook login pilot

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -20,7 +20,8 @@
         <ion-input formControlName="phoneNumber" type="text" class=text-input placeholder="Phone Number"></ion-input>
       </ion-item><br/>
       <ion-button no-margin type="submit" expand="block" [disabled]="!loginForm.valid" strong="true">LOGIN</ion-button><br/>
-      <app-google-login (googleLogin)=verifyGoogleUser($event)></app-google-login>
+      <app-google-login (googleLogin)=verifyGoogleUser($event)></app-google-login><br/>
+      <app-facebook-login></app-facebook-login>
     </form>
   </div>
 </ion-content>
