--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -9,7 +9,7 @@
       </ion-item>
       <ion-item>
         <ion-input formControlName="phoneNumber" type="text" class=text-input placeholder="Phone Number"></ion-input>
-      </ion-item>
+      </ion-item><br/>
 
       <ion-button no-margin type="submit" expand="block" [disabled]="!registerForm.valid" strong="true">REGISTER</ion-button>
     </form>
