profile service integrated

--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -14,9 +14,9 @@
       </ion-col>
       <ion-col size="1"></ion-col>
       <ion-col size="9">
-        <ion-label style="font-size: 20px">{{user.userName}}</ion-label> <br />
-        <ion-label style="font-size: 15px">{{user.userMailId}}</ion-label><br />
-        <ion-label style="font-size: 15px">+91-{{user.userPhoneNum}}</ion-label>
+        <ion-label style="font-size: 20px">{{user.full_name}}</ion-label> <br />
+        <ion-label style="font-size: 15px">{{user.mailid}}</ion-label><br />
+        <ion-label style="font-size: 15px">+91-{{user.phone_number}}</ion-label>
 
       </ion-col>
 
