service changes for getting partner details integrated

--- a/src/app/components/partner/partner.component.html
+++ b/src/app/components/partner/partner.component.html
@@ -1,3 +1,3 @@
-<ion-card [ngStyle]= "{'background-image': 'url('+ partnerItem.imageUrl +')'}" [routerLink] ="['/tabs',partnerItem.id]" >
+<ion-card [ngStyle]= "{'background-image': 'url(http://103.120.179.22:8080/ufs/beerdrum/PartnerPics/'+ partnerItem?.partner_image_url +'.jpg)'}" [routerLink] ="['/tabs',partnerItem.id]" >
   <!-- <ion-card-content class ="card-content">{{partnerItem.partnerName}}</ion-card-content> -->
 </ion-card>
