Manage Order WIP

--- a/src/app/components/added-item/added-item.component.html
+++ b/src/app/components/added-item/added-item.component.html
@@ -8,7 +8,8 @@
 
   <ion-item>
     <ion-avatar slot="start" size="large">
-      <img [src]="beverageItem.bannerImageUrl">
+      <img [src]="'http://103.120.179.22:8080/ufs/beerdrum/bevPics/' + beverageItem.bannerImageUrl + '.jpg'">
+     <!--<img [src]="beverageItem.bannerImageUrl">-->
     </ion-avatar>
     <ion-label>
       <h3 style="font-family: 'Montserrat Regular'">{{beverageItem.beverageName}}</h3>
