--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -21,7 +21,7 @@
       </ion-item><br/>
       <ion-button no-margin type="submit" expand="block" [disabled]="!loginForm.valid" strong="true">LOGIN</ion-button><br/>
       <app-google-login (googleLogin)=verifyGoogleUser($event)></app-google-login><br/>
-      <app-facebook-login></app-facebook-login>
+      <!--<app-facebook-login></app-facebook-login>-->
     </form>
   </div>
 </ion-content>
